[gd_scene load_steps=10 format=3 uid="uid://bv3q716hdd784"]

[ext_resource type="PackedScene" uid="uid://bxbae4jdo88x" path="res://ball.tscn" id="1_m3r6m"]
[ext_resource type="PackedScene" uid="uid://ddoamvmbk0sw3" path="res://peg.tscn" id="2_h2rpi"]
[ext_resource type="Texture2D" uid="uid://b7xc1sd3q24wm" path="res://7ccb010d8fddc4bcd84587ef3c34d100.png" id="3_ajkc5"]
[ext_resource type="Script" path="res://manager.gd" id="4_aqfp3"]
[ext_resource type="FontFile" uid="uid://q2fqiyjs0ege" path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/connection_ii/ConnectionII.otf" id="5_ep12o"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cvssc"]
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1730l"]
size = Vector2(228.5, 1677)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8r004"]
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iprha"]
size = Vector2(1200.5, 139)

[node name="Node2D" type="Node2D"]
position = Vector2(300, 0)

[node name="RigidBody2D" parent="." instance=ExtResource("1_m3r6m")]
position = Vector2(160, -540)

[node name="pegs" type="Node" parent="."]

[node name="StaticBody2D17" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(974, -143)

[node name="StaticBody2D16" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(665, 16)

[node name="StaticBody2D15" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(889, -29)

[node name="StaticBody2D7" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(701, -89)

[node name="StaticBody2D6" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(199, -43)

[node name="StaticBody2D" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(288, 94)

[node name="StaticBody2D2" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(148, 101)

[node name="StaticBody2D3" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(364, 74)

[node name="StaticBody2D4" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(172, -178)

[node name="StaticBody2D5" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(378, -144)

[node name="StaticBody2D8" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(506, 105)

[node name="StaticBody2D9" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(468, -16)

[node name="StaticBody2D10" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(324, -18)

[node name="StaticBody2D11" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(279, -128)

[node name="StaticBody2D12" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(379, -73)

[node name="StaticBody2D13" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(568, -46)

[node name="StaticBody2D14" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(481, -132)

[node name="StaticBody2D18" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(775, -10)

[node name="StaticBody2D19" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(722, 101)

[node name="StaticBody2D20" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(570, 71)

[node name="StaticBody2D21" parent="pegs" instance=ExtResource("2_h2rpi")]
position = Vector2(345, 179)

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
physics_material_override = SubResource("PhysicsMaterial_cvssc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(186.75, 834.5)
shape = SubResource("RectangleShape2D_1730l")

[node name="7Ccb010d8Fddc4Bcd84587Ef3c34d100" type="Sprite2D" parent="Walls/StaticBody2D"]
position = Vector2(187, 543.613)
scale = Vector2(0.308424, 0.835799)
texture = ExtResource("3_ajkc5")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_8r004")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1496, 787)
shape = SubResource("RectangleShape2D_1730l")

[node name="7Ccb010d8Fddc4Bcd84587Ef3c34d100" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(1498, 547)
scale = Vector2(0.308424, 0.835799)
texture = ExtResource("3_ajkc5")

[node name="Manager" type="Node2D" parent="."]
script = ExtResource("4_aqfp3")

[node name="DamageLabel" type="Label" parent="Manager"]
offset_left = -288.0
offset_top = 197.0
offset_right = 64.0
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("5_ep12o")
theme_override_font_sizes/font_size = 75
text = "Damage:"

[node name="BallLabel" type="Label" parent="Manager"]
offset_left = -287.0
offset_top = 612.0
offset_right = 69.0
offset_bottom = 809.0
theme_override_fonts/font = ExtResource("5_ep12o")
theme_override_font_sizes/font_size = 75
text = "Balls:"

[node name="Deadzone" type="Area2D" parent="Manager"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Manager/Deadzone"]
position = Vector2(874, 1522)
shape = SubResource("RectangleShape2D_iprha")

[connection signal="area_entered" from="Manager/Deadzone" to="Manager" method="_on_deadzone_area_entered"]
[connection signal="body_entered" from="Manager/Deadzone" to="Manager" method="_on_deadzone_body_entered"]
